<resources>
    <string name="app_name">MoviesViewerSimple</string>
    <string name="custom_layout_tag_text">movies_list_item</string>
    <string name="open_drawer_menu_item">Open Driver</string>
    <string name="home_menu_item_text">Home</string>
    <string name="add_movie_item_text">Add Movie</string>
    <string name="web_search_item_text">Web Search</string>
    <string name="db_search_item_text">Data Base Search</string>
    <string name="settings_item_text">Settings</string>
    <string name="movie_not_found_message">Movie not found!!!</string>
    <string name="empty_search_string_message">You must enter search string!!!</string>
    <string name="implement_go_to_fragment_listener_interface_message">You must implement GoToFragmentListener interface</string>
    <string name="subject_label_text">Subject</string>
    <string name="store_hint_text">Store here</string>
    <string name="body_label_text">Body</string>
    <string name="year_label_text">Year</string>
    <string name="show_button_text">Show</string>
    <string name="url_label_text">Image Url</string>
    <string name="exist_movie_message">Movie already Exist!!!</string>
    <string name="empty_subject_message">Must Enter Subject!</string>
    <string name="empty_image_url_message">Must Enter Image Url!!!</string>
    <string name="invalid_year_message">Year is not valid!!!</string>
    <string name="remove_all_item_text">Remove all movies</string>
    <string name="exit_item_text">Exit</string>
    <string name="back_menu_item_text">Back</string>
    <string name="movies_list_fragment_settings_key">movies_list_fragment_settings</string>
    <string name="movies_list_fragment_settings_title_text">Movies List Settings</string>
    <string name="list_enable_watched_key">list_enable_watched_key</string>
    <string name="enable_watched_off_text">Enable Watched</string>
    <string name="enable_watched_on_text">Disable watched</string>
    <string name="enable_watched_title">Watching Enabling</string>
    <string name="search_enable_watched_key">search_enable_watched_key</string>
    <string name="db_search_enable_watched_key">db_search_enable_watched_key</string>
    <string name="list_enable_year_key">list_enable_year_key</string>
    <string name="enable_year_off_text">Enable Year</string>
    <string name="enable_year_on_text">Disable Year</string>
    <string name="enable_year_title">Year Enabling</string>
    <string name="search_enable_year_key">search_enable_year_key</string>
    <string name="db_search_enable_year_key">db_search_enable_year_key</string>
    <string name="list_enable_rate_key">list_enable_rate_key</string>
    <string name="enable_rate_off_text">Enable Rate</string>
    <string name="enable_rate_on_text">Disable Rate</string>
    <string name="enable_rate_title">Rate Enabling</string>
    <string name="image_shapes_list_title">Image Shapes</string>
    <string name="movies_list_image_shapes_list_key">movies_list_image_shapes_list_key</string>
    <string name="image_shapes_list_summary">Set Image Shapes</string>
    <string name="web_search_image_shapes_list_key">web_search_image_shapes_list_key</string>
    <string name="db_search_image_shapes_list_key">db_search_image_shapes_list_key</string>
    <string name="search_enable_rate_key">search_enable_rate_key</string>
    <string name="db_search_enable_rate_key">db_search_enable_rate_key</string>
    <string name="movies_list_order_list_key">movies_list_order_list_key</string>
    <string name="order_list_title">Movies Order</string>
    <string name="order_list_summary">Define Movies List</string>
    <string name="web_search_order_list_key">web_search_order_list_key</string>
    <string name="db_search_order_list_key">db_search_order_list_key</string>
    <string name="search_movies_settings_key">search_movies_settings_key</string>
    <string name="search_movies_settings_title_text">Web Search Settings</string>
    <string name="db_search_movies_settings_key">db_search_movies_settings_key</string>
    <string name="db_search_movies_settings_title_text">DB Search Settings</string>
    <string name="implement_exit_app_listener_interace_message">You must implement exitAppListener interface</string>
    <string name="empty_movies_list_message">Not Movies to remove!!!</string>
    <string name="warning_title_text">Warning</string>
    <string name="delete_all_movies_warning_message">You really wand to delete all movies</string>
    <string name="positive_button_text">OK</string>
    <string name="negative_button_text">Cancel</string>
    <string name="implement_get_selected_movie_listener">You must implement getSelectedMovieListener</string>
    <string name="implement_set_selected_movie_listener_interface_message">You must implement GetSelectedMovieListener interface</string>
    <string name="movie_options_dialog_title_text">Movie options</string>
    <string name="fail_share_image_message">Image fail to share!!!</string>
    <string name="delete_one_movie_message">You really want to delete this movie</string>
    <string name="implement_share_image_listener_message">You must implement ShareImageListener</string>
    <string name="return_movies_menu_item_text">Return Movies</string>
    <string name="empty_garbage_list_message">Not movie to return</string>
    <string name="back_menu_item_text1">Home</string>
    <string name="store_image_context_menu_item_text">Store Image</string>
    <string name="store_image_to_gallery_context_menu_option_text">Store Image to gallery</string>
    <string name="upload_image_from_gallery_context_item_text">Upload image from gallery</string>
    <string name="empty_share_image_message">Not Image to share</string>
    <string name="invalid_image_url_message">Invalid Image Url</string>
    <string name="empty_url_image_message">Empty Image Url !!!</string>
    <string name="empty_image_message">Image not Exist!!!</string>
    <string name="already_stored_image_message">Image already exist</string>
    <string name="warning_to_store_data_text">Not forget to store data!!!</string>
    <string name="empty_file_name_message">Image path not exist!!!</string>
    <string name="invalid_file_name_message">Invalid file name</string>
    <string name="implement_edit_movie_listener_message">You must implement edit movie list interface</string>
    <string name="implement_add_movie_listener_message">You must implement add movie listener interface</string>
    <string name="implement_add_movies_list_listener_message">You must implement add movies list listener interface</string>
    <string name="implement_delete_all_movies_listener_message">You must implement delete all movies list message</string>
    <string name="implement_delete_movies_list_listener_message">You must implement delete movies list interface</string>
</resources>
