<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/subject_label"
                android:layout_width="160dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/subject_label_text"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/subject_edit_text"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_below="@id/subject_label"
                android:layout_centerHorizontal="true"
                android:hint="@string/store_hint_text"
                android:textColor="@android:color/holo_blue_dark"
                android:textColorHint="@android:color/holo_blue_dark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/body_label"
                android:layout_width="160dp"
                android:layout_height="100dp"
                android:layout_below="@id/subject_edit_text"
                android:gravity="center"
                android:text="@string/body_label_text"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp">

            </TextView>

            <EditText
                android:id="@+id/body_edit_text"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_below="@id/body_label"
                android:layout_centerHorizontal="true"
                android:hint="@string/store_hint_text"
                android:inputType="textMultiLine"
                android:textColor="@android:color/holo_blue_dark"
                android:textColorHint="@android:color/holo_blue_dark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/year_label"
                android:layout_width="160dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/year_label_text"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp"
                android:layout_below="@+id/body_edit_text"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

            </TextView>

            <EditText
                android:id="@+id/year_edit_text"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_below="@id/year_label"
                android:layout_centerHorizontal="true"
                android:hint="@string/store_hint_text"
                android:textColor="@android:color/holo_blue_dark"
                android:textColorHint="@android:color/holo_blue_dark"
                android:textSize="20sp" />


            <ImageView
                android:id="@+id/movie_poster_image_view"
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:layout_below="@id/year_edit_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp" />

            <Button
                android:id="@+id/show_image_button"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignTop="@id/movie_poster_image_view"
                android:layout_toRightOf="@id/movie_poster_image_view"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/show_button_text"
                android:textColor="@android:color/white"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/image_url_label"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@id/movie_poster_image_view"
                android:gravity="center"
                android:text="@string/url_label_text"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/url_edit_text"
                android:layout_width="230dp"
                android:layout_height="100dp"
                android:layout_below="@id/image_url_label"
                android:layout_marginTop="20dp"
                android:hint="@string/store_hint_text"
                android:textColor="@android:color/holo_blue_dark"
                android:textColorHint="@android:color/holo_blue_dark"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/load_body_pb"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:visibility="gone" />


        </RelativeLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_check_box_24dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/advanced_options_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_settings_applications_24dp"
        android:layout_alignParentRight="true"
        android:layout_above="@id/save_button"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        />


</RelativeLayout>
